[backend] v0.0.3 added data/predict end point with technical limitation on data transfer [ml] added grpc support
